testsuite/tests/indexed-types/should_fail/T14230.stderr

T14230.hs:11:3: error:
    • Type indexes must match class instance head
      Expected: CD @(Maybe a)
        Actual: CD @(k -> *)
    • In the data instance declaration for ‘CD’
      In the instance declaration for ‘C (Maybe a)’
